tests/baselines/reference/es6ImportEqualsExportModuleCommonJsError.errors.txt
main.ts(1,20): error TS2497: This module can only be referenced with ECMAScript imports/exports by turning on the 'esModuleInterop' flag and referencing its default export.


==== a.ts (0 errors) ====
    class a { }
    export = a;
    
==== main.ts (1 errors) ====
    import * as a from "./a";
                       ~~~~~
!!! error TS2497: This module can only be referenced with ECMAScript imports/exports by turning on the 'esModuleInterop' flag and referencing its default export.
    a;
    
    
    